Opened 3 years ago

Closed 3 years ago

#10265 closed defect (fixed)

Chroma goes wrong when using untile and tile filters from 4:2:2 pixel format

Reported by: nicol Owned by:
Priority: normal Component: avfilter
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

Summary of the bug: Chroma of 4:2:2 pixel format goes wrong regardless of bit depth, while 4:2:0 and 4:4:4 pixel formats are normal.

How to reproduce:

Make a test video.
% ffmpeg -f lavfi -i smptehdbars=d=5:s=1920x1080,format=yuv422p foo.mp4 -y

Use untile,tile filters.
% ffmpeg -i foo.mp4 -vf untile=2x2,tile=2x2 bar.mp4 -y
ffmpeg version N-110014-ga6e9d01f88-20230315 Copyright (c) 2000-2023 the FFmpeg developers
  built with gcc 12.2.0 (crosstool-NG 1.25.0.90_cf9beb1)
  configuration: --prefix=/ffbuild/prefix --pkg-config-flags=--static --pkg-config=pkg-config --cross-prefix=x86_64-w64-mingw32- --arch=x86_64 --target-os=mingw32 --enable-gpl --enable-version3 --disable-debug --disable-w32threads --enable-pthreads --enable-iconv --enable-libxml2 --enable-zlib --enable-libfreetype --enable-libfribidi --enable-gmp --enable-lzma --enable-fontconfig --enable-libvorbis --enable-opencl --disable-libpulse --enable-libvmaf --disable-libxcb --disable-xlib --enable-amf --enable-libaom --enable-libaribb24 --enable-avisynth --enable-chromaprint --enable-libdav1d --enable-libdavs2 --disable-libfdk-aac --enable-ffnvcodec --enable-cuda-llvm --enable-frei0r --enable-libgme --enable-libkvazaar --enable-libass --enable-libbluray --enable-libjxl --enable-libmp3lame --enable-libopus --enable-librist --enable-libssh --enable-libtheora --enable-libvpx --enable-libwebp --enable-lv2 --disable-libmfx --enable-libvpl --enable-openal --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenh264 --enable-libopenjpeg --enable-libopenmpt --enable-librav1e --enable-librubberband --enable-schannel --enable-sdl2 --enable-libsoxr --enable-libsrt --enable-libsvtav1 --enable-libtwolame --enable-libuavs3d --disable-libdrm --disable-vaapi --enable-libvidstab --enable-vulkan --enable-libshaderc --enable-libplacebo --enable-libx264 --enable-libx265 --enable-libxavs2 --enable-libxvid --enable-libzimg --enable-libzvbi --extra-cflags=-DLIBTWOLAME_STATIC --extra-cxxflags= --extra-ldflags=-pthread --extra-ldexeflags= --extra-libs=-lgomp --extra-version=20230315
  libavutil      58.  3.100 / 58.  3.100
  libavcodec     60.  6.101 / 60.  6.101
  libavformat    60.  4.100 / 60.  4.100
  libavdevice    60.  2.100 / 60.  2.100
  libavfilter     9.  4.100 /  9.  4.100
  libswscale      7.  2.100 /  7.  2.100
  libswresample   4. 11.100 /  4. 11.100
  libpostproc    57.  2.100 / 57.  2.100
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'foo.mp4':
  Metadata:
    major_brand     : isom
    minor_version   : 512
    compatible_brands: isomiso2avc1mp41
    encoder         : Lavf60.4.100
  Duration: 00:00:05.00, start: 0.000000, bitrate: 24 kb/s
  Stream #0:0[0x1](und): Video: h264 (High 4:2:2) (avc1 / 0x31637661), yuv422p(tv, bt709/unknown/unknown, progressive), 1920x1080 [SAR 1:1 DAR 16:9], 20 kb/s, 25 fps, 25 tbr, 12800 tbn (default)
    Metadata:
      handler_name    : VideoHandler
      vendor_id       : [0][0][0][0]
      encoder         : Lavc60.6.101 libx264
Stream mapping:
  Stream #0:0 -> #0:0 (h264 (native) -> h264 (libx264))
Press [q] to stop, [?] for help
[libx264 @ 000002586427b1c0] using SAR=1/1
[libx264 @ 000002586427b1c0] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2
[libx264 @ 000002586427b1c0] profile High 4:2:2, level 4.0, 4:2:2, 8-bit
[libx264 @ 000002586427b1c0] 264 - core 164 - H.264/MPEG-4 AVC codec - Copyleft 2003-2023 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=12 lookahead_threads=2 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00
Output #0, mp4, to 'bar.mp4':
  Metadata:
    major_brand     : isom
    minor_version   : 512
    compatible_brands: isomiso2avc1mp41
    encoder         : Lavf60.4.100
  Stream #0:0(und): Video: h264 (avc1 / 0x31637661), yuv422p(tv, bt709/unknown/unknown, progressive), 1920x1080 [SAR 1:1 DAR 16:9], q=2-31, 25 fps, 12800 tbn (default)
    Metadata:
      handler_name    : VideoHandler
      vendor_id       : [0][0][0][0]
      encoder         : Lavc60.6.101 libx264
    Side data:
      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A
frame=  125 fps=108 q=-1.0 Lsize=      16kB time=00:00:04.88 bitrate=  26.2kbits/s speed=4.22x
video:13kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 17.533136%
[libx264 @ 000002586427b1c0] frame I:1     Avg QP:10.16  size:  2344
[libx264 @ 000002586427b1c0] frame P:31    Avg QP:12.68  size:   107
[libx264 @ 000002586427b1c0] frame B:93    Avg QP:12.67  size:    78
[libx264 @ 000002586427b1c0] consecutive B-frames:  0.8%  0.0%  0.0% 99.2%
[libx264 @ 000002586427b1c0] mb I  I16..4: 96.4%  1.6%  2.0%
[libx264 @ 000002586427b1c0] mb P  I16..4:  0.0%  0.1%  0.0%  P16..4:  0.0%  0.0%  0.0%  0.0%  0.0%    skip:99.8%
[libx264 @ 000002586427b1c0] mb B  I16..4:  0.0%  0.0%  0.0%  B16..8:  0.2%  0.0%  0.0%  direct: 0.0%  skip:99.8%  L0:99.5% L1: 0.5% BI: 0.0%
[libx264 @ 000002586427b1c0] 8x8 transform intra:5.5%
[libx264 @ 000002586427b1c0] coded y,uvDC,uvAC intra: 0.8% 1.5% 0.5% inter: 0.0% 0.0% 0.0%
[libx264 @ 000002586427b1c0] i16 v,h,dc,p: 94%  4%  1%  0%
[libx264 @ 000002586427b1c0] i8 v,h,dc,ddl,ddr,vr,hd,vl,hu:  1% 70% 29%  0%  0%  0%  0%  0%  0%
[libx264 @ 000002586427b1c0] i4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 41% 37% 22%  0%  0%  0%  0%  0%  0%
[libx264 @ 000002586427b1c0] i8c dc,h,v,p: 87%  4% 10%  0%
[libx264 @ 000002586427b1c0] Weighted P-Frames: Y:0.0% UV:0.0%
[libx264 @ 000002586427b1c0] ref P L0: 98.9%  0.0%  1.1%
[libx264 @ 000002586427b1c0] ref B L0:  2.2% 97.8%
[libx264 @ 000002586427b1c0] kb/s:20.65

ffmpeg version N-110014-ga6e9d01f88-20230315
built on ... btbn windows build

Patches should be submitted to the ffmpeg-devel mailing list and not this bug tracker.

Change History (1)

comment:1 by James, 3 years ago

Analyzed by developer: set
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.